syntax = "proto3";
package auth;
option go_package="github.com/Zhoangp/Api_Gateway-Courses/internal/auth/pb";

import "internal/error/pb/error.proto";

service AuthService {
  rpc Register(RegisterRequest)returns(RegisterResponse);
  rpc Login(LoginRequest)returns(LoginResponse);
  rpc Validate(ValidateRequest)returns(ValidateResponse);
  rpc NewToken(NewTokenRequest)returns(NewTokenResponse);
  rpc VerifyAccount(VerifyAccountRequest)returns(VerifyAccountResponse);
  rpc GetTokenVeriryAccount(VerifyAccountRequest)returns(VerifyAccountResponse);


}

message RegisterRequest {
  string firstName = 1;
  string lastName = 2;
  string email = 3;
  string password = 4;
  string phoneNumber = 5;
  string address = 6;
  string role = 7;
}
message RegisterResponse {
  error.ErrorResponse error = 1;
}
message LoginRequest {
  string email = 1;
  string password = 2;
}
message LoginResponse {
  string accessToken = 1;
  string refreshToken = 2;
  uint32 expiresAt = 3;
  error.ErrorResponse error = 4;
}

message ValidateRequest {
  string token = 1;
}
message ValidateResponse {
  int64 userId = 1;
  error.ErrorResponse error = 2;
}
message NewTokenRequest {
  string refreshToken = 1;
}
message NewTokenResponse {
  string accessToken = 1;
  uint32 expiresAt = 2;
  error.ErrorResponse error = 3;
}
message VerifyAccountRequest {
  string email = 1;
  string password = 2;
}
message VerifyAccountResponse {
  error.ErrorResponse error = 1;
}




